# oxide

./: .bzrignore  .editorconfig  .gitignore  .qmake.conf  BUILD.gn  CHROMIUM_VERSION  CMakeLists.txt  DEPS.oxide  FORKED_GIT_REPOS  checkout.conf  client.py  gclient.conf  gyp_oxide  init-checkout.py  oxide.gyp  oxideqt.pro  patch-tool.py  release-tool.py
.hg/: hgrc
qt/: CMakeLists.txt  VERSION  config.cmake  config.gni  gyp.pro  install.pro  oxide_version.h.in  qt.gypi  run_qmlapp.sh.in  run_qmlscene.sh.in  sandbox.pro
qt/core/: BUILD.gn  core.gyp  core.pro  dummy.cc  moc.gypi  system.gyp
qt/documentation/: CMakeLists.txt  overview.qdoc  oxideqt-core-cpp-classes.qdoc  oxideqt-qml-types.qdoc  oxideqt-qtquick-cpp-classes.qdoc  oxideqt.qdocconf.in
qt/lib/: lib.gyp  lib.pro  system.gyp
qt/qmlplugin/: CMakeLists.txt  oxide.qmltypes  oxide_qml_download_request.cc  oxide_qml_download_request.h  oxide_qml_load_event.cc  oxide_qml_load_event.h  oxide_qml_navigation_item.cc  oxide_qml_navigation_item.h  oxide_qml_plugin.cc  oxide_qml_ssl_certificate.cc  oxide_qml_ssl_certificate.h  oxide_qml_value_type_provider.cc  oxide_qml_value_type_provider.h  qmlplugin.gyp  qmlplugin.pro
qt/qmlrunner/: CMakeLists.txt  main.cc  qmlrunner.pro
qt/quick/: CMakeLists.txt  auxiliary_ui_factory.cc  auxiliary_ui_factory.h  contents_view.cc  contents_view.h  legacy_contents_view.cc  legacy_contents_view.h  oxide_qml_plugin.cc  oxide_qquick_accelerated_frame_node.cc  oxide_qquick_accelerated_frame_node.h  oxide_qquick_accelerated_render_view_node.cc  oxide_qquick_accelerated_render_view_node.h  oxide_qquick_alert_dialog.cc  oxide_qquick_alert_dialog.h  oxide_qquick_alert_dialog_delegate.cc  oxide_qquick_alert_dialog_delegate.h  oxide_qquick_before_unload_dialog.cc  oxide_qquick_before_unload_dialog.h  oxide_qquick_before_unload_dialog_delegate.cc  oxide_qquick_before_unload_dialog_delegate.h  oxide_qquick_confirm_dialog.cc  oxide_qquick_confirm_dialog.h  oxide_qquick_confirm_dialog_delegate.cc  oxide_qquick_confirm_dialog_delegate.h  oxide_qquick_contents_view.cc  oxide_qquick_contents_view.h  oxide_qquick_file_picker.cc  oxide_qquick_file_picker.h  oxide_qquick_file_picker_delegate.cc  oxide_qquick_file_picker_delegate.h  oxide_qquick_image_frame_node.cc  oxide_qquick_image_frame_node.h  oxide_qquick_init.cc  oxide_qquick_init.h  oxide_qquick_javascript_dialog.cc  oxide_qquick_javascript_dialog.h  oxide_qquick_javascript_dialog_delegate.cc  oxide_qquick_javascript_dialog_delegate.h  oxide_qquick_painted_render_view_node.cc  oxide_qquick_painted_render_view_node.h  (+57 more)
qt/renderer/: BUILD.gn  main.cc  renderer.gyp  renderer.pro
qt/sandbox/: sandbox.pro
qt/tests/: CMakeLists.txt  runtests.py
qt/uitk/: CMakeLists.txt
shared/: BUILD.gn  allocator.gyp  chromedriver.gypi  oxide_resources.grd  shared.gyp  shared.gypi
shared/allocator/: BUILD.gn
shared/app/: oxide_content_main_delegate.cc  oxide_content_main_delegate.h  oxide_main.cc  oxide_main.h  oxide_platform_delegate.h
shared/base/: oxide_cross_thread_data_stream.cc  oxide_cross_thread_data_stream.h  oxide_enum_flags.h  oxide_event_utils.cc  oxide_event_utils.h  oxide_id_allocator.cc  oxide_id_allocator.h
shared/browser/: browser_object_weak_ptrs.h  chrome_controller.cc  chrome_controller.h  chrome_controller_client.h  chrome_controller_observer.cc  chrome_controller_observer.h  compositor_util.cc  display_form_factor.h  hybris_utils.cc  hybris_utils.h  in_process_renderer_observer.cc  in_process_renderer_observer.h  legacy_touch_editing_client.h  legacy_touch_editing_controller.cc  legacy_touch_editing_controller.h  navigation_controller_observer.cc  navigation_controller_observer.h  oxide_access_token_store.cc  oxide_access_token_store.h  oxide_android_properties.cc  oxide_android_properties.h  oxide_browser_context.cc  oxide_browser_context.h  oxide_browser_context_anchor.cc  oxide_browser_context_anchor.h  oxide_browser_context_delegate.h  oxide_browser_context_destroyer.cc  oxide_browser_context_destroyer.h  oxide_browser_context_impl.cc  oxide_browser_context_impl.h  oxide_browser_context_observer.cc  oxide_browser_context_observer.h  oxide_browser_main_parts.cc  oxide_browser_main_parts.h  oxide_browser_platform_integration.cc  oxide_browser_platform_integration.h  oxide_browser_platform_integration_observer.cc  oxide_browser_platform_integration_observer.h  oxide_browser_process_handle.cc  oxide_browser_process_handle.h  (+240 more)
shared/chromium_support/: oxide_toolkit_utils.cc
shared/common/: oxide_constants.cc  oxide_constants.h  oxide_content_client.cc  oxide_content_client.h  oxide_content_main_delegate.cc  oxide_content_main_delegate.h  oxide_core_export.h  oxide_cross_thread_data_stream.cc  oxide_cross_thread_data_stream.h  oxide_enum_flags.h  oxide_event_utils.cc  oxide_event_utils.h  oxide_export.h  oxide_file_utils.cc  oxide_file_utils.h  oxide_form_factor.cc  oxide_form_factor.h  oxide_i18n.py  oxide_id_allocator.h  oxide_message_enums.h  oxide_message_generator.cc  oxide_message_generator.h  oxide_messages.h  oxide_net_resource_provider.cc  oxide_net_resource_provider.h  oxide_param_traits.cc  oxide_param_traits.h  oxide_paths.cc  oxide_paths.h  oxide_script_message.cc  oxide_script_message.h  oxide_script_message_handler.cc  oxide_script_message_handler.h  oxide_script_message_params.cc  oxide_script_message_params.h  oxide_script_message_request.cc  oxide_script_message_request.h  oxide_shared_export.h  oxide_unowned_user_data.h  oxide_user_agent.cc  (+6 more)
shared/gl/: gl_context_linux.cc  gl_image_linux.cc  gl_implementation_linux.cc  gl_surface_linux.cc  oxide_gl_context_adopted.cc  oxide_gl_context_adopted.h  oxide_gl_implementation.h  oxide_shared_gl_context.cc  oxide_shared_gl_context.h
shared/gpu/: oxide_gl_context_adopted.cc  oxide_gl_context_adopted.h  oxide_gl_context_dependent.cc  oxide_gl_context_dependent.h
shared/media/: mediahub.gyp  mediahub_player_shim.cc  mediahub_player_shim.h  player.cc  player.h
shared/ozone/: oxide_media_ozone_platform.cc  oxide_ozone_platform.cc  oxide_ozone_surface_factory.cc  ozone.gypi  (+1 more)
(+1721 files in other folders)
