# vim:expandtab:shiftwidth=2:tabstop=2:

# Copyright (C) 2016 Canonical Ltd.

# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.

# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.

# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA

declare_args() {
  enable_tests = false

  oxide_platform = false
}

assert(oxide_platform != false)

import("//oxide/$oxide_platform/config.gni")

assert(defined(oxide_platform_targets))

group("oxide_all") {
  # FIXME: Split test targets out of this one
  testonly = true

  deps = oxide_platform_targets
  deps += [
    "//sandbox"
  ]

  if (enable_tests) {
    if (defined(oxide_platform_test_targets)) {
      deps += oxide_platform_test_targets
    }
    deps += [ "//oxide/shared:shared_unittests" ]
  }
}
